[package]
name = "icp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.16.0"
ic-kit = "0.4.3"
ic-cdk-timers = "0.10"
serde = "1.0.126"
serde_json = "1.0"
serde_derive = "1.0.126"
getrandom = { version = "0.2.15", features = ["custom"] }
cap-std = { git = "https://github.com/Psychedelic/cap", branch = "main", package = "cap-standards", features = [
  "alpha-dip20",
  "cap-sdk",
  "sdk-impls",
] }
cap-sdk = { git = "https://github.com/Psychedelic/cap.git", branch = "main" }
alloy = { git = "https://github.com/ic-alloy/ic-alloy.git", tag = "v0.3.5-icp.1", default-features = false, features = [
  "icp",
  "contract",
  "sol-types",
  "json",
] }
evm-rpc-canister-types = "=3.0.0"